...
internal fun Modifier.editorDescription(
    resource: Int,
    vararg arguments: Any,
    identity: String? = null,
): Modifier {
    val description = stringResource(resource, *arguments)
    val tag = identity ?: ("editor_" + LocalResources.current.getResourceEntryName(resource))
    return testTag(tag).semantics { contentDescription = description }
}

